# danbot-comfy-node

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
config/: models.yml  prompt_templates.yml
src/: __init__.py  config.py  tags.py
src/js/: print_string.js
src/models/: __init__.py  utils.py  v1.py  v2.py  v2408.py  v3.py
src/nodes/: __init__.py  auto_aspect_ratio_tag.py  ban_tags.py  extractor.py  formatter.py  generation_config.py  generator.py  load_model.py  pipeline.py  type.py  upsampler.py
src/nodes/utils/: concat_string.py  escape_brackets.py  print_string.py  text_input.py
src/tags/: __init__.py
src/tags/v2/: copyright.txt
src/tags/v3/: character.txt
tags/ban_template/: all_text.txt  alternate_attire.txt  major_concepts.txt  military.txt  year.txt
tags/v2/: character.txt
tags/v3/: copyright.txt
workflows/: Manual_Translation+Extension.json  Translation+Extension+Image_Generation.json  Translation+Extension.json
