[project]
name = "danbot-comfy-node"
description = "Translate and extend danbooru tags using Danbot models."
version = "0.1.1"
license = { file = "LICENSE" }
dependencies = [
    "protobuf>=6.30.1",
    "sentencepiece>=0.2.0",
    "transformers>=4.49.0",
]

[project.urls]
Repository = "https://github.com/p1atdev/danbot-comfy-node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "p1atdev"
DisplayName = "danbot-comfy-node"
Icon = "https://raw.githubusercontent.com/p1atdev/danbot-comfy-node/refs/heads/main/assets/icon.png"
